# shuttle-datadog-logs

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  db.sql
src/: lib.rs  main.rs
static/: index.html
