[package]
name = "shuttle-datadog-logs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["web-axum"] }
axum = "0.6.4"
sync_wrapper = "0.1.1"
# tracing
tracing = "0.1"
dd-tracing-layer = "0.1.3"
# secrets
shuttle-secrets = "0.10.0"
# database
shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls","postgres"] }
# static files
shuttle-static-folder = "0.10.0"
tower-http = {version = "0.3", features = ["fs"] }
