[package]
name = "shuttle-datadog-logs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6"
shuttle-axum = "0.27.0"
shuttle-runtime = { version = "0.27.0", default-features = false }
tokio = "1"
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
dd-tracing-layer = "0.1"
# secrets
shuttle-secrets = "0.27.0"

